# OpenBell

./: .env.example  .gitignore  LICENSE  README.md  start.sh
android-app/: build.gradle.kts  kiosk-setup.sh  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/doorbell/app/: DoorbellApplication.kt
android-app/app/src/main/java/com/doorbell/app/network/: ServerRegistration.kt
android-app/app/src/main/java/com/doorbell/app/receiver/: BootReceiver.kt  DoorbellDeviceAdmin.kt
android-app/app/src/main/java/com/doorbell/app/ui/: CallActivity.kt  (+2 more)
android-app/app/src/main/res/drawable/: ic_doorbell.xml  ic_launcher_foreground.xml  indicator_dot.xml
android-app/app/src/main/res/layout/: activity_call.xml  activity_main.xml  activity_settings.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
cv-server/: config.py  detector.py  main.py  recognizer.py  recorder.py  requirements.txt  snapshots.py  sort_snapshots.py  static_filter.py  stream.py  tracker.py  web_stream.py
electron-app/: package-lock.json  package.json
electron-app/src/: index.html  main.js  preload.js  renderer.js  styles.css
rust-server/: Cargo.toml
rust-server/src/: audio.rs  bin.rs  discovery.rs  dsp.rs  main.rs  protocol.rs  relay.rs  state.rs  ws_server.rs
tauri-app/src/: index.html  renderer.js  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
voice-assistant/: audio_io.py  chat.py  config.py  intent.py  main.py  requirements.txt  responses.py  stt.py  tts.py
(+4 files in other folders)
