[package]
name = "doorbell-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
mdns-sd = "0.11"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
async-stream = "0.3"
bytes = "1"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "test_format"
path = "src/bin.rs"
